--- a/doc.src/Footer.html
+++ b/doc.src/Footer.html
@@ -3,7 +3,7 @@
 <hr>
 <center>
 
-&copy; Sintegrial Technologies 2011
+&copy; Sintegrial Technologies 2011-2014
 <br>
 <a href="http://www.sintegrial.com" target="_blank">http://www.sintegrial.com</a>
 
